--- a/frontend/src/styles/Signup.css
+++ b/frontend/src/styles/Signup.css
@@ -104,6 +104,28 @@ body {
     text-decoration: underline;
 }
 
+.navbar {
+    position: fixed; /* Fixa a navbar no topo da tela */
+    top: 0;          /* Garante que esteja encostada no topo */
+    left: 0;         /* Faz com que comece do lado esquerdo da tela */
+    width: 100%;     /* Ocupa toda a largura da tela */
+    padding: 20px;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra para dar destaque */
+    z-index: 1000;   /* Garante que a navbar fique por cima de outros elementos */
+    box-sizing: border-box;
+}
+
+.logo {
+    color: #000000;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+
+
 /* Linha vertical separadora */
 .separator {
     width: 1px;
@@ -117,7 +139,7 @@ body {
     height: 100vh; /* Garante que a altura da imagem seja igual à altura da viewport */
     background-image: url('../assets/images/gardenImage.jpg'); /* Caminho correto da imagem */
     background-size: cover; /* Faz com que a imagem cubra todo o espaço */
-    background-position: center; /* Centraliza a imagem */
+    background-position: right; /* Centraliza a imagem */
     background-repeat: no-repeat; /* Evita repetição da imagem */
 }
 
@@ -125,4 +147,68 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.input-error {
+    border: 2px solid red;
+}
+
+.input-valid {
+    border: 2px solid green;
+}
+
+.error-message {
+    color: red;
+    margin-top: 10px;
+}
+
+.success-message {
+    color: green;
+    margin-top: 10px;
+}
+
+
+
+.password-strength {
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.weak-password {
+    color: red;
+}
+
+.medium-password {
+    color: orange;
+}
+
+.strong-password {
+    color: green;
+}
+
+
+
+.password-container {
+    display: flex; /* Faz com que o contêiner use flexbox */
+    align-items: center; /* Centraliza os itens verticalmente */
+    margin-bottom: 20px; /* Espaçamento entre os contêineres de senha */
+}
+
+.password-container input {
+    flex: 10; /* O input ocupa 4 partes do espaço disponível */
+    margin-right: 10px; /* Espaço entre o input e o botão */
+    padding: 10px; /* Ajuste o padding conforme necessário */
+    box-sizing: border-box; /* Inclui o padding e a borda no cálculo da largura */
+}
+
+.password-toggle {
+    flex: 1; /* O botão ocupa 1 parte do espaço disponível */
+    padding: 10px; /* Ajuste o padding conforme necessário */
+    background-color: #4CAF50; /* Cor de fundo do botão */
+    border: none; /* Remove as bordas */
+    color: white; /* Cor do texto */
+    cursor: pointer; /* Muda o cursor para indicar ação */
+    text-align: center; /* Centraliza o texto dentro do botão */
+    font-size: 14px; /* Ajuste o tamanho da fonte conforme necessário */
+    border-radius: 4px; /* Adiciona bordas arredondadas, se desejado */
 }
